...
        app:layout_constraintBottom_toTopOf="@+id/text_questions_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/shape_radio"
            android:button="@null"
            android:clickable="true"
...
/>


        <!--            android:text="@string/radio_answer_1_template"-->

        <RadioButton
            android:id="@+id/radio_answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/shape_radio"
            android:button="@null"
            android:clickable="true"
...
            android:text="@string/radio_answer_3_template"
            android:textAppearance="@style/TextAppearance.MyApp.Subtitle1"
            android:textColor="@color/on_surface"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radio_answer_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/shape_radio"
            android:button="@null"
            android:clickable="true"
...
            android:padding="16dp"
            android:text="@string/radio_answer_4_template"
            android:textAppearance="@style/TextAppearance.MyApp.Subtitle1"
            android:textColor="@color/on_surface" />

        <RadioButton
            android:id="@+id/radio_answer_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/shape_radio"
            android:button="@null"
            android:clickable="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="5 /  40" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:visibility="gone"
...
