...
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_title_change_quiz"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.MyApp.Subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_eng" />

    <TextView
        android:id="@+id/title_settings_change_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
...
        android:textAppearance="@style/TextAppearance.MyApp.Subtitle2"
        android:textColor="@color/on_surface_bright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_ukr"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_lang_radio_ukr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_settings_change_lang" />

    <ImageView
        android:id="@+id/image_rus"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_lang_radio_rus"
        app:layout_constraintStart_toStartOf="parent"
...
            android:button="@null"
            android:text="@string/settings_radio_eng"
            android:textAppearance="@style/TextAppearance.MyApp.Subtitle1" />
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_quiz_option_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="0dp"
...
