...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <Button
        android:id="@+id/button_start_quiz"
        android:layout_width="224dp"
        android:layout_height="60dp"
        android:text="@string/chooseview_btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_main_compass_1" />

    <Button
        android:id="@+id/button_compass_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseview_btn_compass_info"
        android:textAppearance="@style/TextAppearance.MyApp.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_2_nation" />

        <ImageView
            android:id="@+id/image_gov_hover"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:clickable="false"
...
            android:alpha="0"
            android:clickable="false"
            android:visibility="visible"
            app:srcCompat="@drawable/img_compass_9_prog" />

        <ImageView
            android:id="@+id/image_lib_hover"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="160dp"
            android:alpha="0"
            android:visibility="visible"
...
